<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Homepage">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_margin="10dp"
        android:weightSum="12"
        android:orientation="vertical"
        android:layout_height="wrap_content">

        <TextView
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/homepageName"

            android:background="@color/colorPrimary"
            android:textStyle="bold"
            android:textSize="30sp"
            android:textColor="@color/white"
            android:gravity="center"

            ></TextView>


        <Button
            android:layout_weight="1"
            android:id="@+id/HomeProfileButton"
            android:layout_margin="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/profile"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            android:background="@color/lgbackground"
            ></Button>

        <Button
            android:layout_weight="1"
            android:id="@+id/homeEditprofileButton"
            android:layout_margin="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Edprofile"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            android:background="@color/lgbackground"
            ></Button>

        <Button
            android:layout_weight="1"
            android:id="@+id/homeLiveresButton"
            android:layout_margin="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/live_result"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            android:background="@color/lgbackground"
            ></Button>
        <Button
            android:layout_weight="1"
            android:id="@+id/homeResultButton"
            android:layout_margin="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/result"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            android:background="@color/lgbackground"
            ></Button>

        <Button
            android:layout_weight="1"
            android:id="@+id/homecomplinButton"
            android:layout_margin="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/complain"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            android:background="@color/lgbackground"
            ></Button>

        <Button
            android:layout_weight="1"
            android:id="@+id/homeBloodButton"
            android:layout_margin="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/blood"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            android:background="@color/lgbackground"
            ></Button>

        <Button
            android:layout_weight="1"
            android:id="@+id/homeCourseButton"
            android:layout_margin="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/course"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            android:background="@color/lgbackground"
            ></Button>

        <Button
            android:layout_weight="1"
            android:id="@+id/homeChangepassButton"
            android:layout_margin="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pass_change"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            android:background="@color/lgbackground"
            ></Button>
        <Button
            android:layout_weight="1"
            android:id="@+id/homeDashboardButton"
            android:layout_margin="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dashb"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            android:background="@color/lgbackground"
            ></Button>
        <Button
            android:layout_weight="1"
            android:id="@+id/homelaptopButton"
            android:layout_margin="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/laptop"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            android:background="@color/lgbackground"
            ></Button>

        <Button
            android:layout_weight="1"
            android:id="@+id/homeLogoutButton"
            android:layout_margin="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/logout"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            android:background="@color/lgbackground"
            ></Button>

    </LinearLayout>



</ScrollView>