<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout

        android:layout_margin="20dp"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="wrap_content">


        <TextView


            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/id"
            android:textColor="@color/red"

            ></TextView>

        <EditText
            android:id="@+id/logpagid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/id"

            ></EditText>




    </LinearLayout>


    <LinearLayout
        android:layout_margin="20dp"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="wrap_content">


        <TextView


            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pass"
            android:textColor="@color/red"

            ></TextView>

        <EditText
            android:id="@+id/logpagepass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/pass"

            ></EditText>




    </LinearLayout>

    <Button
        android:id="@+id/logpagLogButton"
        android:layout_margin="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        android:background="@color/lgbackground"
        ></Button>

    <Button

        android:id="@+id/logpagRegButton"
        android:layout_margin="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/reg"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        android:background="@color/lgbackground"
        ></Button>





</LinearLayout>